tests/baselines/reference/typeReferenceDirectives8(strict=true).errors.txt
/types/lib/index.d.ts(1,17): error TS7008: Member 'x' implicitly has an 'any' type.


==== /mod2.ts (0 errors) ====
    import {foo} from "./mod1";
    export const bar = foo();
==== /types/lib/index.d.ts (1 errors) ====
    interface Lib { x }
                    ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    
==== /mod1.ts (0 errors) ====
    export function foo(): Lib { return {x: 1} }
    